FEAT: реализован модуль получения гео-данных, сформирована таблица гео-данных, сформирован сид
